--- a/pytest.ini
+++ b/pytest.ini
@@ -11,7 +11,7 @@ flake8-ignore =
     sickbeard/bs4_parser.py D100 D101 D102 D105 F841
     sickbeard/classes.py D100 D101 D102 D105 D200 D204 D205 D400 I100 I101
     sickbeard/clients/deluge_client.py D100 D101 D102 E303 W293
-    sickbeard/clients/deluged_client.py D100 D101 D102 E501
+    sickbeard/clients/deluged_client.py D100 D101 D102 E501 I100
     sickbeard/clients/download_station_client.py D100 D101 D102 D200 D202 D400 I100
     sickbeard/clients/generic.py D100 D101 D102 D200 D205 D400 D401 I100 I101
     sickbeard/clients/__init__.py D103 D104
@@ -145,6 +145,7 @@ flake8-ignore =
     SickBeard.py D102 D200 D400 D401 E402 E501 I100 I101
     sickbeard/refiners/__init__.py D104
     sickbeard/refiners/release.py E241
+    sickbeard/refiners/tvepisode.py I100
     sickbeard/rssfeeds.py D100 D103
     sickbeard/sab.py D100 D202 D400 D401 I100
     sickbeard/sbdatetime.py D100 D101 D102 D105 D202 D205 D400 I100
