Lint fixes: Updating new paths in flake8 whitelist

--- a/pytest.ini
+++ b/pytest.ini
@@ -152,7 +152,8 @@ flake8-ignore =
     sickbeard/searchBacklog.py D100 D101 D102 E501 I100 I101
     sickbeard/search.py D100 D202 D401 E501 F401 F821 I100 I101
     sickbeard/search_queue.py D100 D101 D102 D103 D200 D204 D205 D210 D400 D401 E231 E501 I100 I101
-    sickbeard/server/api/core.py D100 D101 D102 D200 D201 D202 D204 D205 D208 D210 D400 D401 D403 E501 I100 I101
+    sickbeard/server/api/v1/core.py D100 D101 D102 D200 D201 D202 D204 D205 D208 D210 D400 D401 D403 E501 I100 I101
+    sickbeard/server/api/v1/__init__.py D104
     sickbeard/server/api/__init__.py D104
     sickbeard/server/core.py D100 D101 D102 E501 I100 I101
     sickbeard/server/__init__.py D104
