Updating flake8 whitelist with new paths

--- a/pytest.ini
+++ b/pytest.ini
@@ -87,61 +87,68 @@ flake8-ignore =
     sickbeard/postProcessor.py D100 D200 D202 D205 D400 D401 E501 F401 I100 I101
     sickbeard/processTV.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 I100 I101
     sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401 I100 I101
-    sickbeard/providers/abnormal.py D100 D102 D204 D400 D403
-    sickbeard/providers/alpharatio.py D100 D102 D204 D400 D403
-    sickbeard/providers/animebytes.py D100 D102 D204 D205 D400 D401 D403 E501 F841 I100
-    sickbeard/providers/anizb.py D100 D102 D400 I100
-    sickbeard/providers/binsearch.py D100 D101 D102 D202 D204 D400 D401
-    sickbeard/providers/bitcannon.py D100 D102 D204 D400 D403 I100
-    sickbeard/providers/bithdtv.py D100 D102 D204 D400 E501
-    sickbeard/providers/bitsnoop.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/bluetigers.py D100 D102 D204 D400
-    sickbeard/providers/btdigg.py D100 D102 D204 D400
-    sickbeard/providers/btn.py D100 D102 D204 D400 I100
-    sickbeard/providers/cpasbien.py D100 D102 D204 D400 E501
-    sickbeard/providers/danishbits.py D100 D101 D102 D400 D401 D403
-    sickbeard/providers/elitetorrent.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/extratorrent.py D100 D102 D204 D400 D403
-    sickbeard/providers/freshontv.py D100 D102 D204 D400 E501 I100
-    sickbeard/providers/gftracker.py D100 D101 D102 D400
-    sickbeard/providers/hd4free.py D100 D102 D204 D400 F401
-    sickbeard/providers/hdbits.py D100 D101 D102 D204 D400 E501
-    sickbeard/providers/hdspace.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/hdtorrents.py D100 D102 D204 D400 D401 D403 E501
-    sickbeard/providers/hounddawgs.py D100 D102 D204 D400 D401 D403
-    sickbeard/providers/ilovetorrents.py D100 D102 D204 D400 D401 D403
-    sickbeard/providers/__init__.py D104 E501 I101
-    sickbeard/providers/iptorrents.py D100 D102 D204 D400 E501 I100
-    sickbeard/providers/kat.py D100 D102 D204 D400 E501 I100
-    sickbeard/providers/limetorrents.py D100 D102 D204 D400 D403 I100
-    sickbeard/providers/morethantv.py D100 D102 D204 D400 D403 I100
-    sickbeard/providers/newpct.py D100 D102 D200 D202 D204 D205 D400 E501
-    sickbeard/providers/newznab.py D100 D102 D200 D204 D205 D400 D401 E501 I100 W391
-    sickbeard/providers/norbits.py D100 D202 D210 D400 I100
-    sickbeard/providers/nyaatorrents.py D100 D101 D102 D400 D401 D403 E501
-    sickbeard/providers/omgwtfnzbs.py D100 D101 D102
-    sickbeard/providers/pretome.py D100 D102 D204 D400
-    sickbeard/providers/rarbg.py D100 D101 D102 D400 E501 I100
-    sickbeard/providers/rsstorrent.py D100 D101 D102 E501 I100
-    sickbeard/providers/scc.py D100 D101 D102 E501 F401 I101
-    sickbeard/providers/scenetime.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/shazbat.py D100 D101 D102 D204 D400
-    sickbeard/providers/speedcd.py D100 D102 D204 D400 E501
-    sickbeard/providers/t411.py D100 D102 D204 D400 E501 I100
-    sickbeard/providers/thepiratebay.py D100 D102 D204 D400 E501 I100
-    sickbeard/providers/tntvillage.py D100 D102 D204 D400 D403 I100
-    sickbeard/providers/tokyotoshokan.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/torrentbytes.py D100 D102 D204 D400 E501
-    sickbeard/providers/torrentday.py D100 D102 D204 D400 E501 F401 W291
-    sickbeard/providers/torrentleech.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/torrentproject.py D100 D101 D102 E501 I100
-    sickbeard/providers/torrentshack.py D100 D102 D204 D400 D403
-    sickbeard/providers/torrentz.py D100 D102 D204 D400 E501 F401
-    sickbeard/providers/transmitthenet.py D100 D102 D204 D400 D403 I100
-    sickbeard/providers/tvchaosuk.py D100 D102 D204 D400 D403 E501
-    sickbeard/providers/womble.py D100 D101 D102 D204 D400
-    sickbeard/providers/xthor.py D100 D102 D204 D400
-    sickbeard/providers/zooqle.py D100 D102 D204 D400
+    sickbeard/providers/__init__.py D104 F401
+    sickbeard/providers/nzb/anizb.py D100 D102 D400 I100
+    sickbeard/providers/nzb/binsearch.py D100 D101 D102 D202 D204 D400 D401
+    sickbeard/providers/nzb/__init__.py D104
+    sickbeard/providers/nzb/newznab.py D100 D102 D200 D204 D205 D400 D401 E501 I100 W391
+    sickbeard/providers/nzb/omgwtfnzbs.py D100 D101 D102
+    sickbeard/providers/nzb/womble.py D100 D101 D102 D204 D400
+    sickbeard/providers/torrent/html/abnormal.py D100 D102 D204 D400
+    sickbeard/providers/torrent/html/alpharatio.py D100 D102 D204 D400
+    sickbeard/providers/torrent/html/animebytes.py D100 D102 D202 D204 D400 E501 F841 I100
+    sickbeard/providers/torrent/html/bithdtv.py D100 D102 D204 D400 E501
+    sickbeard/providers/torrent/html/bluetigers.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/html/cpasbien.py D100 D102 D204 D400 E501
+    sickbeard/providers/torrent/html/danishbits.py D100 D102 D204 D400
+    sickbeard/providers/torrent/html/elitetorrent.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/html/extratorrent.py D100 D102
+    sickbeard/providers/torrent/html/freshontv.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/html/gftracker.py D100 D101 D102 D400
+    sickbeard/providers/torrent/html/hdspace.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/html/hdtorrents.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/html/hounddawgs.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/html/ilovetorrents.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/html/__init__.py D104
+    sickbeard/providers/torrent/html/iptorrents.py D100 D102 D202 D204 D400 I100
+    sickbeard/providers/torrent/html/limetorrents.py D100 D102 D204 D400 I100
+    sickbeard/providers/torrent/html/morethantv.py D100 D102 D204 D400 I100
+    sickbeard/providers/torrent/html/newpct.py D100 D102 D200 D202 D204 D205 D400 E501
+    sickbeard/providers/torrent/html/pretome.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/html/scc.py D100 D101 D102 D202 D400 E501 I101
+    sickbeard/providers/torrent/html/scenetime.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/html/speedcd.py D100 D102 D204 D400 E501
+    sickbeard/providers/torrent/html/thepiratebay.py D100 D102 D204 D400 E501 I100
+    sickbeard/providers/torrent/html/tntvillage.py D100 D102 D202 D204 D400 I100
+    sickbeard/providers/torrent/html/tokyotoshokan.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/html/torrentbytes.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/html/torrentleech.py D100 D102 D204 D400
+    sickbeard/providers/torrent/html/torrentshack.py D100 D102 D204 D400
+    sickbeard/providers/torrent/html/transmitthenet.py D100 D102 D202 D204 D400 I100
+    sickbeard/providers/torrent/html/tvchaosuk.py D100 D102 D204 D400 E501
+    sickbeard/providers/torrent/html/xthor.py D100 D102 D204 D400 F841
+    sickbeard/providers/torrent/html/zooqle.py D100 D102 D204 D400
+    sickbeard/providers/torrent/__init__.py D104 F401
+    sickbeard/providers/torrent/json/bitcannon.py D100 D102 D202 D204 D400 I100
+    sickbeard/providers/torrent/json/btdigg.py D100 D102 D202 D204 D400
+    sickbeard/providers/torrent/json/btn.py D100 D102 D202 D204 D400 I100
+    sickbeard/providers/torrent/json/hd4free.py D100 D102 D202 D204 D400 F401
+    sickbeard/providers/torrent/json/hdbits.py D100 D101 D102 D202 D204 D400 E501 I100
+    sickbeard/providers/torrent/json/__init__.py D104
+    sickbeard/providers/torrent/json/norbits.py D100 D202 D210 D400 E501 F821 I100
+    sickbeard/providers/torrent/json/rarbg.py D100 D102 E501
+    sickbeard/providers/torrent/json/t411.py D100 D102 D202 D204 D400 E501 I100
+    sickbeard/providers/torrent/json/torrentday.py D100 D102 D202 D204 D400 E501 F401
+    sickbeard/providers/torrent/json/torrentproject.py D100 D102 D202 D204 D400 I100
+    sickbeard/providers/torrent/rss/__init__.py D104
+    sickbeard/providers/torrent/rss/nyaatorrents.py D100 D101 D102 D202 D400 E501
+    sickbeard/providers/torrent/rss/rsstorrent.py D100 D101 D102 E501 I100
+    sickbeard/providers/torrent/rss/shazbat.py D100 D101 D102 D204 D400
+    sickbeard/providers/torrent/xml/bitsnoop.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/xml/extratorrent.py D100 D102 D202 D204 D400 E501
+    sickbeard/providers/torrent/xml/__init__.py D104
+    sickbeard/providers/torrent/xml/kat.py D100 D102 D202 D204 D400 E501 I100
+    sickbeard/providers/torrent/xml/torrentz.py D100 D102 D202 D204 D400
     SickBeard.py D102 D200 D400 D401 E402 E501 I100 I101
     sickbeard/rssfeeds.py D100 D103
     sickbeard/sab.py D100 D202 D400 D401 I100
@@ -152,9 +159,9 @@ flake8-ignore =
     sickbeard/searchBacklog.py D100 D101 D102 E501 I100 I101
     sickbeard/search.py D100 D202 D401 E501 F401 F821 I100 I101
     sickbeard/search_queue.py D100 D101 D102 D103 D200 D204 D205 D210 D400 D401 E231 E501 I100 I101
+    sickbeard/server/api/__init__.py D104
     sickbeard/server/api/v1/core.py D100 D101 D102 D200 D201 D202 D204 D205 D208 D210 D400 D401 D403 E501 I100 I101
     sickbeard/server/api/v1/__init__.py D104
-    sickbeard/server/api/__init__.py D104
     sickbeard/server/core.py D100 D101 D102 E501 I100 I101
     sickbeard/server/__init__.py D104
     sickbeard/server/web/config/anime.py D102 D200 D202 D204 D400 I100
@@ -164,7 +171,7 @@ flake8-ignore =
     sickbeard/server/web/config/__init__.py D104 F401 I100
     sickbeard/server/web/config/notifications.py D102 D200 D202 D204 D400 E501 I100
     sickbeard/server/web/config/post_processing.py D102 D200 D202 D204 D205 D400 I100
-    sickbeard/server/web/config/providers.py D102 D200 D202 D205 D400 D401 E501 I100
+    sickbeard/server/web/config/providers.py D102 D200 D202 D205 D400 D401 E501 F821 I100
     sickbeard/server/web/config/search.py D102 D200 D202 D204 D400 E501 I100
     sickbeard/server/web/config/subtitles.py D102 D200 D204 D400 E501 I100
     sickbeard/server/web/core/authentication.py D102 D200 D202 D204 D205 D400 I100
@@ -204,6 +211,7 @@ flake8-ignore =
     sickrage/media/ShowFanArt.py D100 D102 D200 D400
     sickrage/media/ShowNetworkLogo.py D100 D102 D200 D400
     sickrage/media/ShowPoster.py D100 D102 D200 D400
+    sickrage/providers/exceptions.py D200 D400
     sickrage/providers/GenericProvider.py D100 D101 D102 D202 D205 D400 D401 E501 F841 I100 I101
     sickrage/providers/__init__.py D104
     sickrage/providers/nzb/__init__.py D104
@@ -225,7 +233,6 @@ flake8-ignore =
     sickrage/system/Shutdown.py D100 D101 D102
     sickrage/tagger/episode.py D102 D200 D204 D205 D400 I100 W291 W293
     sickrage/tagger/__init__.py D104
-    tests/*.py D101 D102 D103
     tests/api_v1_tests.py D200 D204 D205 D400
     tests/common_tests.py D200 D204 D400 E402
     tests/config_tests.py D200 D204 D400 E402 E501 I100
@@ -240,6 +247,7 @@ flake8-ignore =
     tests/notifier_tests.py D200 D204 D400 E402 E501 I100
     tests/numdict_tests.py D200 D204 D400 D403 E402 E501 F841 I100
     tests/pp_tests.py D100 D200 D204 D400 E402 I100
+    tests/*.py D101 D102 D103
     tests/scene_helpers_tests.py D200 D204 D205 D400 E402 E501 I100 I101
     tests/search_tests.py D100 D200 D202 D204 D400 E402 I100
     tests/sickrage_tests/helper/common_tests.py D200 D400 E402 E501 I100 I101
