Implementing proper 'proper' comparison

--- a/pytest.ini
+++ b/pytest.ini
@@ -84,7 +84,7 @@ flake8-ignore =
     sickbeard/nzbSplitter.py D100 D202 D400 E501 I101
     sickbeard/postProcessor.py D100 D200 D202 D205 D400 D401 E501 F401 I100 I101
     sickbeard/processTV.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 I100 I101
-    sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401 I100 I101
+    sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401
     sickbeard/providers/__init__.py D104 F401
     sickbeard/providers/nzb/anizb.py D100 D102 D400 I100
     sickbeard/providers/nzb/binsearch.py D100 D101 D102 D202 D204 D400 D401
