Improving test configuration to run faster. Flake8 and Cov running together is too slow

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,6 @@
 [pytest]
-norecursedirs = .build .cache .eggs .tox cache contrib lib
+norecursedirs = .build .cache .eggs .tox cache contrib htmlcov lib
 python_files = *test*.py
-addopts = --flake8
 flake8-max-line-length = 120
 flake8-ignore =
     setup.py D200 D400
