--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ norecursedirs = .build .cache .eggs .tox cache contrib htmlcov lib
 python_files = *test*.py
 flake8-max-line-length = 120
 flake8-ignore =
+    # E402 module level import not at top of file
     setup.py D200 D400
     sickbeard/auto_postprocessor.py D100 D101 D102 D105 D400 D401
     sickbeard/blackandwhitelist.py D100 D101 D102 D200 D202 D400 D401 I101
@@ -240,7 +241,7 @@ flake8-ignore =
     tests/exceptions_helper_tests.py D200 D205 D400 E402 E501
     tests/feedparser_tests.py D100 D200 D204 D400 E402
     tests/helpers_tests.py D200 D204 D205 D400 E402
-    tests/__init__.py D104
+    tests/__init__.py D104 E402
     tests/issue_submitter_tests.py D100 D200 D204 D400 E402 I101
     tests/name_parser_tests.py D200 D202 D204 D400 D401 E402 E501 I100
     tests/notifier_tests.py D200 D204 D400 E402 E501 I100
