--- a/pytest.ini
+++ b/pytest.ini
@@ -128,7 +128,7 @@ flake8-ignore =
     sickbeard/providers/torrent/html/tvchaosuk.py D100 D102 D204 D400 E501
     sickbeard/providers/torrent/html/xthor.py D100 D102 D204 D400 F841
     sickbeard/providers/torrent/html/zooqle.py D100 D102 D204 D400
-    sickbeard/providers/torrent/__init__.py D104 F401
+    sickbeard/providers/torrent/__init__.py D104
     sickbeard/providers/torrent/json/bitcannon.py D100 D102 D202 D204 D400 I100
     sickbeard/providers/torrent/json/btdigg.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/json/btn.py D100 D102 D202 D204 D400 I100
