--- a/pytest.ini
+++ b/pytest.ini
@@ -132,7 +132,7 @@ flake8-ignore =
     sickbeard/providers/torrent/json/bitcannon.py D100 D102 D202 D204 D400 I100
     sickbeard/providers/torrent/json/btdigg.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/json/btn.py D100 D102 D202 D204 D400 I100
-    sickbeard/providers/torrent/json/hd4free.py D100 D102 D202 D204 D400 F401
+    sickbeard/providers/torrent/json/hd4free.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/json/hdbits.py D100 D101 D102 D202 D204 D400 E501 I100
     sickbeard/providers/torrent/json/__init__.py D104
     sickbeard/providers/torrent/json/norbits.py D100 D202 D210 D400 E501 F821 I100
