--- a/pytest.ini
+++ b/pytest.ini
@@ -138,7 +138,7 @@ flake8-ignore =
     sickbeard/providers/torrent/json/norbits.py D100 D202 D210 D400 E501 F821 I100
     sickbeard/providers/torrent/json/rarbg.py D100 D102 E501
     sickbeard/providers/torrent/json/t411.py D100 D102 D202 D204 D400 E501 I100
-    sickbeard/providers/torrent/json/torrentday.py D100 D102 D202 D204 D400 E501 F401
+    sickbeard/providers/torrent/json/torrentday.py D100 D102 D202 D204 D400 E501
     sickbeard/providers/torrent/json/torrentproject.py D100 D102 D202 D204 D400 I100
     sickbeard/providers/torrent/rss/__init__.py D104
     sickbeard/providers/torrent/rss/nyaatorrents.py D100 D101 D102 D202 D400 E501
