Some PEP8 fixes, moving to standard logging API, removed unused methods + very few tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,7 +33,7 @@ flake8-ignore =
     sickbeard/failed_history.py D100 D103 D202 D205 D400 D401 E501 I100 I101
     sickbeard/failedProcessor.py D100 D205 D400 I101
     sickbeard/generic_queue.py D100 D101 D102 D200 D202 D400 D401
-    sickbeard/helpers.py D100 D103 D200 D202 D205 D210 D400 D401 D403 E501 I100 I101
+    sickbeard/helpers.py D103 E501
     sickbeard/history.py D100 D400 E501 I100 I101
     sickbeard/image_cache.py D100 D101 D102 D105 D200 D202 D205 D400 D401 E501 I100
     sickbeard/imdbPopular.py D100 E501
