Fix getURL when no resp (could not connect) (#871)
* Fix getURL

* Update network_timezones.py

* Move 'if' as suggested by rato

* Fix providers

* Change from 'text' to 'response'

* If not auth, break. Not continue

* Missing Logs

* Flake fix

* More flake

* More flake2

* More flake4

* fixup more flake2

* Update pytest.ini

* Some PEP8 fixes, moving to standard logging API, removed unused methods + very few tests

* Update helpers.py

* Remove raise_for_status in bitcannon

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,7 +33,7 @@ flake8-ignore =
     sickbeard/failed_history.py D100 D103 D202 D205 D400 D401 E501 I100 I101
     sickbeard/failedProcessor.py D100 D205 D400 I101
     sickbeard/generic_queue.py D100 D101 D102 D200 D202 D400 D401
-    sickbeard/helpers.py D100 D103 D200 D202 D205 D210 D400 D401 D403 E501 I100 I101
+    sickbeard/helpers.py D103 E501
     sickbeard/history.py D100 D400 E501 I100 I101
     sickbeard/image_cache.py D100 D101 D102 D105 D200 D202 D205 D400 D401 E501 I100
     sickbeard/imdbPopular.py D100 E501
@@ -128,17 +128,17 @@ flake8-ignore =
     sickbeard/providers/torrent/html/tvchaosuk.py D100 D102 D204 D400 E501
     sickbeard/providers/torrent/html/xthor.py D100 D102 D204 D400 F841
     sickbeard/providers/torrent/html/zooqle.py D100 D102 D204 D400
-    sickbeard/providers/torrent/__init__.py D104 F401
+    sickbeard/providers/torrent/__init__.py D104
     sickbeard/providers/torrent/json/bitcannon.py D100 D102 D202 D204 D400 I100
     sickbeard/providers/torrent/json/btdigg.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/json/btn.py D100 D102 D202 D204 D400 I100
-    sickbeard/providers/torrent/json/hd4free.py D100 D102 D202 D204 D400 F401
+    sickbeard/providers/torrent/json/hd4free.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/json/hdbits.py D100 D101 D102 D202 D204 D400 E501 I100
     sickbeard/providers/torrent/json/__init__.py D104
     sickbeard/providers/torrent/json/norbits.py D100 D202 D210 D400 E501 F821 I100
     sickbeard/providers/torrent/json/rarbg.py D100 D102 E501
     sickbeard/providers/torrent/json/t411.py D100 D102 D202 D204 D400 E501 I100
-    sickbeard/providers/torrent/json/torrentday.py D100 D102 D202 D204 D400 E501 F401
+    sickbeard/providers/torrent/json/torrentday.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/json/torrentproject.py D100 D102 D202 D204 D400 I100
     sickbeard/providers/torrent/rss/__init__.py D104
     sickbeard/providers/torrent/rss/nyaatorrents.py D100 D101 D102 D202 D400 E501
