--- a/pytest.ini
+++ b/pytest.ini
@@ -55,8 +55,6 @@ flake8-ignore =
     sickbeard/metadata/tivo.py D100 D102 D202 D205 D400 D401 E501 I100 I101
     sickbeard/metadata/wdtv.py D100 D102 D202 D205 D400 D401 F401 F823 I100 I101
     sickbeard/name_cache.py D100 D200 D400 D401 E501 I100 I101
-    sickbeard/name_parser/parser.py D100 D101 D102 D105 D202 D205 D208 D400 D401 E126 E222 E501 I100 I101
-    sickbeard/name_parser/regexes.py D100 E501
     sickbeard/naming.py D100 D101 D102 D103 D205 D400 D401 E501 I100 I101
     sickbeard/network_timezones.py D100 D103 D200 D202 D400 E501 I100
     sickbeard/notifiers/boxcar2.py D100 D101 D102 D202 D400 D401 E225 E501 I101
@@ -86,7 +84,7 @@ flake8-ignore =
     sickbeard/nzbSplitter.py D100 D202 D400 E501 I101
     sickbeard/postProcessor.py D100 D200 D202 D205 D400 D401 E501 F401 I100 I101
     sickbeard/processTV.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 I100 I101
-    sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401 I100 I101
+    sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401
     sickbeard/providers/__init__.py D104 F401
     sickbeard/providers/nzb/anizb.py D100 D102 D400 I100
     sickbeard/providers/nzb/binsearch.py D100 D101 D102 D202 D204 D400 D401
@@ -245,7 +243,6 @@ flake8-ignore =
     tests/helpers_tests.py D200 D204 D205 D400 E402
     tests/__init__.py D104 E402
     tests/issue_submitter_tests.py D100 D200 D204 D400 E402 I101
-    tests/name_parser_tests.py D200 D202 D204 D400 D401 E402 E501 I100
     tests/notifier_tests.py D200 D204 D400 E402 E501 I100
     tests/numdict_tests.py D200 D204 D400 D403 E402 E501 F841 I100
     tests/pp_tests.py D100 D200 D204 D400 E402 I100
