--- a/tests/datasets/tvshows.yml
+++ b/tests/datasets/tvshows.yml
@@ -2997,3 +2997,22 @@
   container: mkv
   mimetype: video/x-matroska
   type: episode
+
+# Title with number and unicode character
+? 3 Show.på.(abc2).s01e01
+: title: 3 Show på abc2
+  season: 1
+  episode: 1
+  type: episode
+
+# Show containing numbers in the title; 2 parts (folder and filename) that matches expected title; + episode title with number!
+# regression test: guessit exception was happening
+? Show '70s Name/Season 07/Show '70s Name - S07E22 - 2000 Episode Title.mkv
+: title: Show '70s Name
+  season: 7
+  episode: 22
+  episode_title: Episode Title
+  year: 2000 # not a big issue for us
+  container: mkv
+  mimetype: video/x-matroska
+  type: episode
