Adding S00EP00 pattern to guessit

--- a/tests/datasets/tvshows.yml
+++ b/tests/datasets/tvshows.yml
@@ -3027,3 +3027,10 @@
   video_codec: h264
   release_group: GROUP
   type: episode
+
+# French releases uses SxxEPxx instead of SxxExx
+? Show.Name.S01EP02
+: title: Show Name
+  season: 1
+  episode: 2
+  type: episode
