--- a/pytest.ini
+++ b/pytest.ini
@@ -9,7 +9,7 @@ flake8-ignore =
     sickbeard/blackandwhitelist.py D100 D101 D102 D200 D202 D400 D401 I101
     sickbeard/browser.py D100 D103 D202 D210 D400 D401 E501
     sickbeard/bs4_parser.py D100 D101 D102 D105 F841
-    sickbeard/classes.py D100 D101 D102 D105 D200 D204 D205 D400 I100 I101
+    sickbeard/classes.py D100 D101 D102 D105
     sickbeard/clients/deluge_client.py D100 D101 D102 E303 W293
     sickbeard/clients/deluged_client.py D100 D101 D102 E501 I100
     sickbeard/clients/download_station_client.py D100 D101 D102 D200 D202 D400 I100
@@ -42,7 +42,6 @@ flake8-ignore =
     sickbeard/indexers/indexer_exceptions.py D400 E501 I101
     sickbeard/indexers/__init__.py D104 F401
     sickbeard/__init__.py D103 D104 E501 F401 F841 I100 I101
-    sickbeard/logger.py E123 E126 I100 I101
     sickbeard/manual_search.py D100 D200 D202 D205 D210 D400 D401 E501 F401 I100 I101
     sickbeard/metadata/generic.py D100 D102 D200 D202 D205 D400 D401 E302 E501 I100
     sickbeard/metadata/helpers.py D100 D103
