Adding pep8 naming config

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,7 +9,7 @@ flake8-ignore =
     sickbeard/blackandwhitelist.py D100 D101 D102 D200 D202 D400 D401 I101
     sickbeard/browser.py D100 D103 D202 D210 D400 D401 E501
     sickbeard/bs4_parser.py D100 D101 D102 D105 F841
-    sickbeard/classes.py D100 D101 D102 D105 D200 D204 D205 D400 I100 I101
+    sickbeard/classes.py D100 D101 D102 D105 D200 D204 D205 D400 I100 I101 N802 N803
     sickbeard/clients/deluge_client.py D100 D101 D102 E303 W293
     sickbeard/clients/deluged_client.py D100 D101 D102 E501 I100
     sickbeard/clients/download_station_client.py D100 D101 D102 D200 D202 D400 I100
@@ -21,7 +21,7 @@ flake8-ignore =
     sickbeard/clients/transmission_client.py D100 D101 D102 I100
     sickbeard/clients/utorrent_client.py D100 D101 D102 I100
     sickbeard/common.py D101 D102 D105 D200 D202 D204 D205 D400 D401 E501 I100 I101
-    sickbeard/config.py D100 D101 D103 D200 D202 D205 D210 D400 D401 E501 I100 I101
+    sickbeard/config.py D100 D101 D103 D200 D202 D205 D210 D400 D401 E501 I100 I101 N802 N803 N806
     sickbeard/dailysearcher.py D100 D102 D200 D400 D401 I100 I101
     sickbeard/databases/cache_db.py D100 D101 D102 E501
     sickbeard/databases/failed_db.py D100 D101 D102 D400 E501
@@ -33,7 +33,7 @@ flake8-ignore =
     sickbeard/failed_history.py D100 D103 D202 D205 D400 D401 E501 I100 I101
     sickbeard/failedProcessor.py D100 D205 D400 I101
     sickbeard/generic_queue.py D100 D101 D102 D200 D202 D400 D401
-    sickbeard/helpers.py D103 E501
+    sickbeard/helpers.py D103 E501 N802 N803 N806
     sickbeard/history.py D100 D400 E501 I100 I101
     sickbeard/image_cache.py D100 D101 D102 D105 D200 D202 D205 D400 D401 E501 I100
     sickbeard/imdbPopular.py D100 E501
@@ -41,10 +41,10 @@ flake8-ignore =
     sickbeard/indexers/indexer_config.py D100 I100
     sickbeard/indexers/indexer_exceptions.py D400 E501 I101
     sickbeard/indexers/__init__.py D104 F401
-    sickbeard/__init__.py D103 D104 E501 F401 F841 I100 I101
+    sickbeard/__init__.py D103 D104 E501 F401 F841 I100 I101 N802 N803 N806
     sickbeard/logger.py E123 E126 I100 I101
     sickbeard/manual_search.py D100 D200 D202 D205 D210 D400 D401 E501 F401 I100 I101
-    sickbeard/metadata/generic.py D100 D102 D200 D202 D205 D400 D401 E302 E501 I100
+    sickbeard/metadata/generic.py D100 D102 D200 D202 D205 D400 D401 E302 E501 I100 N802 N806
     sickbeard/metadata/helpers.py D100 D103
     sickbeard/metadata/__init__.py D104 I101
     sickbeard/metadata/kodi_12plus.py D100 D102 D202 D205 D400 D401 I100 I101
@@ -63,7 +63,7 @@ flake8-ignore =
     sickbeard/notifiers/freemobile.py D100 D101 D102 D202 D400 D401 E225 E501 I100 I101
     sickbeard/notifiers/growl.py D100 D101 D102 E501 F821 I100 I101
     sickbeard/notifiers/__init__.py D103 D104 I101
-    sickbeard/notifiers/kodi.py D100 D101 D102 D202 D400 D401 E302 E501 I100 I101
+    sickbeard/notifiers/kodi.py D100 D101 D102 D202 D400 D401 E302 E501 I100 I101 N803 N806
     sickbeard/notifiers/libnotify.py D100 D101 D102 D205 D400 E501 F401 I100 I101
     sickbeard/notifiers/nma.py D100 D101 D102 E501 I100 I101
     sickbeard/notifiers/nmj.py D100 D101 D102 D202 D400 D401 I100
@@ -82,7 +82,7 @@ flake8-ignore =
     sickbeard/numdict.py D102 D105 D200 D205 D400 D401
     sickbeard/nzbget.py D100 D400 D401 E501 I100 I101
     sickbeard/nzbSplitter.py D100 D202 D400 E501 I101
-    sickbeard/postProcessor.py D100 D200 D202 D205 D400 D401 E501 F401 I100 I101
+    sickbeard/postProcessor.py D100 D200 D202 D205 D400 D401 E501 F401 I100 I101 N802 N803 N806
     sickbeard/processTV.py D100 D101 D102 D103 D202 D205 D400 D401 E127 E128 E265 E302 E501 F401 I100 I101
     sickbeard/properFinder.py D100 D101 D102 D200 D202 D400 E501 F401
     sickbeard/providers/__init__.py D104 F401
@@ -155,16 +155,16 @@ flake8-ignore =
     sickbeard/scene_numbering.py D100 D200 D205 D400 D401 E501 I100
     sickbeard/scheduler.py D100 D101 D102 D200 D205 D400 D401 E501 I100
     sickbeard/searchBacklog.py D100 D101 D102 E501 I100 I101
-    sickbeard/search.py D100 D202 D401 E501 F401 F821 I100 I101
+    sickbeard/search.py D100 D202 D401 E501 F401 F821 I100 I101 N802 N803 N806 N812
     sickbeard/search_queue.py D100 D101 D102 D103 D200 D204 D205 D210 D400 D401 E231 E501 I100 I101
     sickbeard/server/api/__init__.py D104
-    sickbeard/server/api/v1/core.py D100 D101 D102 D200 D201 D202 D204 D205 D208 D210 D400 D401 D403 E501 I100 I101
+    sickbeard/server/api/v1/core.py D100 D101 D102 D200 D201 D202 D204 D205 D208 D210 D400 D401 D403 E501 I100 I101 N801
     sickbeard/server/api/v1/__init__.py D104
-    sickbeard/server/core.py D100 D101 D102 E501 I100 I101
+    sickbeard/server/core.py D100 D101 D102 E501 I100 I101 N802
     sickbeard/server/__init__.py D104
     sickbeard/server/web/config/anime.py D102 D200 D202 D204 D400 I100
     sickbeard/server/web/config/backup_restore.py D100 D101 D102 I100
-    sickbeard/server/web/config/general.py D100 D101 D102 E501 I100
+    sickbeard/server/web/config/general.py D100 D101 D102 E501 I100 N802 N803
     sickbeard/server/web/config/handler.py D102 D200 D204 D400 I100 I101
     sickbeard/server/web/config/__init__.py D104 F401 I100
     sickbeard/server/web/config/notifications.py D102 D200 D202 D204 D400 E501 I100
@@ -173,15 +173,16 @@ flake8-ignore =
     sickbeard/server/web/config/search.py D102 D200 D202 D204 D400 E501 I100
     sickbeard/server/web/config/subtitles.py D102 D200 D204 D400 E501 I100
     sickbeard/server/web/core/authentication.py D102 D200 D202 D204 D205 D400 I100
-    sickbeard/server/web/core/base.py D100 D101 D102 D103 D200 D204 D210 D400 D401 I100 I101
+    sickbeard/server/web/core/base.py D100 D101 D102 D103 D200 D204 D210 D400 D401 I100 I101 N802
     sickbeard/server/web/core/calendar.py D200 D204 D205 D400 D401 I100
+    sickbeard/server/web/core/error_logs.py N803
     sickbeard/server/web/core/file_browser.py D100 D101 D102 E501 I100
     sickbeard/server/web/core/history.py D100 D101 D102 E501 I100 I101
     sickbeard/server/web/core/__init__.py D104 F401 I100 I101
-    sickbeard/server/web/home/add_shows.py D100 D101 D102 D200 D205 D400 D401 E501 I100 I101
+    sickbeard/server/web/home/add_shows.py D100 D101 D102 D200 D205 D400 D401 E501 I100 I101 N802 N803 N806
     sickbeard/server/web/home/add_recommended.py D100
     sickbeard/server/web/home/change_log.py D100 D101 D102 E501 I100
-    sickbeard/server/web/home/handler.py D100 D101 D102 D202 D205 D210 D400 D401 E128 E501 F401 F841 I100 I101
+    sickbeard/server/web/home/handler.py D100 D101 D102 D202 D205 D210 D400 D401 E128 E501 F401 F841 I100 I101 N802 N803 N806
     sickbeard/server/web/home/__init__.py D104 F401 I100
     sickbeard/server/web/home/irc.py D100 D101 D102 I100
     sickbeard/server/web/home/news.py D100 D101 D102 E501 I100
@@ -191,12 +192,12 @@ flake8-ignore =
     sickbeard/server/web/manage/__init__.py D104 F401
     sickbeard/server/web/manage/searches.py D100 D101 D102 I100
     sickbeard/show_name_helpers.py D100 D200 D202 D205 D400 D401 E231 E501 I100 I101
-    sickbeard/show_queue.py D100 D101 D102 D205 D400 D401 E501 I100 I101
+    sickbeard/show_queue.py D100 D101 D102 D205 D400 D401 E501 I100 I101 N802 N803 N806
     sickbeard/showUpdater.py D100 D101 D102 D105 E251 E302 E501 F401 I100
     sickbeard/traktChecker.py D100 D101 D102 D200 D202 D205 D208 D400 D401 E261 E303 E501 I100 I101
     sickbeard/tvcache.py D100 D101 D102 D200 D205 D400 D401 E501 F401 I100 I101
     sickbeard/ui.py D100 D101 D102 D200 D202 D204 D205 D400 D401 E501
-    sickbeard/versionChecker.py D100 D101 D102 D200 D202 D205 D400 D401 E402 E501 I100 I101
+    sickbeard/versionChecker.py D100 D101 D102 D200 D202 D205 D400 D401 E402 E501 I100 I101 N802 N803 N806
     sickrage/helper/common.py D100 D200 D202 D205 D400 E128 E302 E501 I100 I101 W391
     sickrage/helper/encoding.py D100 D202 D400 D401 I100
     sickrage/helper/exceptions.py D100 D200 D202 D205 D400 I100
