--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envdir = {toxworkdir}/tox
 deps =
     flake8_docstrings
     flake8-import-order
+    pep8-naming
     pytest
     pytest-cov
     pytest-flake8
