Small performance improvements for guessit. Added an utility to report guessit issues

--- a/pytest.ini
+++ b/pytest.ini
@@ -246,6 +246,7 @@ flake8-ignore =
     tests/numdict_tests.py D200 D204 D400 D403 E402 E501 F841 I100
     tests/pp_tests.py D100 D200 D204 D400 E402 I100
     tests/*.py D101 D102 D103
+    tests/report_guessit.py E402
     tests/scene_helpers_tests.py D200 D204 D205 D400 E402 E501 I100 I101
     tests/search_tests.py D100 D200 D202 D204 D400 E402 I100
     tests/sickrage_tests/helper/common_tests.py D200 D400 E402 E501 I100 I101
