Fix SSC provider daily search, add better icon
* remove quote
* use try_int
* add proper_strings
* add _strip_year
* pep
* update tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -112,7 +112,7 @@ flake8-ignore =
     sickbeard/providers/torrent/html/morethantv.py D100 D102 D204 D400 I100
     sickbeard/providers/torrent/html/newpct.py D100 D102 D200 D202 D204 D205 D400 E501 N801
     sickbeard/providers/torrent/html/pretome.py D100 D102 D202 D204 D400
-    sickbeard/providers/torrent/html/scc.py D100 D101 D102 D202 D400 E501 I101
+    sickbeard/providers/torrent/html/scc.py D100
     sickbeard/providers/torrent/html/scenetime.py D100 D102 D202 D204 D400 E501
     sickbeard/providers/torrent/html/speedcd.py D100 D102 D204 D400 E501
     sickbeard/providers/torrent/html/thepiratebay.py D100 D102 D204 D400 E501 I100
