--- a/pytest.ini
+++ b/pytest.ini
@@ -105,7 +105,7 @@ flake8-ignore =
     sickbeard/providers/torrent/html/scc.py D100
     sickbeard/providers/torrent/html/scenetime.py D100 D102 D202 D204 D400 E501
     sickbeard/providers/torrent/html/speedcd.py D100 D102 D204 D400 E501
-    sickbeard/providers/torrent/html/thepiratebay.py D100 D102 D204 D400 E501 I100
+    sickbeard/providers/torrent/html/thepiratebay.py D100
     sickbeard/providers/torrent/html/tntvillage.py D100 D102 D202 D204 D400 I100
     sickbeard/providers/torrent/html/tokyotoshokan.py D100 D102 D202 D204 D400
     sickbeard/providers/torrent/html/torrentbytes.py D100 D102 D202 D204 D400 E501
