--- a/pytest.ini
+++ b/pytest.ini
@@ -31,7 +31,7 @@ flake8-ignore =
     sickbeard/indexers/indexer_config.py D100 I100
     sickbeard/indexers/indexer_exceptions.py D400 E501 I101
     sickbeard/indexers/__init__.py D104 F401
-    sickbeard/__init__.py D103 D104 E501 F401 F841 I100 I101 N802 N803 N806
+    sickbeard/__init__.py D103 D104 E501 F401 F841 N802 N803 N806
     sickbeard/manual_search.py D100 D200 D202 D205 D210 D400 D401 E501 F401 I100 I101 N802
     sickbeard/metadata/generic.py D100 D102 D200 D202 D205 D400 D401 E302 E501 I100 N802 N806
     sickbeard/metadata/helpers.py D100 D103 N802 N803 N806
@@ -152,7 +152,7 @@ flake8-ignore =
     sickbeard/server/__init__.py D104
     sickbeard/server/web/config/anime.py D102 D200 D202 D204 D400 I100 N802
     sickbeard/server/web/config/backup_restore.py D100 D101 D102 I100 N803
-    sickbeard/server/web/config/general.py D100 D101 D102 E501 I100 N802 N803
+    sickbeard/server/web/config/general.py D100 D101 D102 E501 N802 N803
     sickbeard/server/web/config/handler.py D102 D200 D204 D400 I100 I101 N802
     sickbeard/server/web/config/__init__.py D104 F401 I100
     sickbeard/server/web/config/notifications.py D102 D200 D202 D204 D400 E501 I100 N802
@@ -185,7 +185,7 @@ flake8-ignore =
     sickbeard/traktChecker.py D100 D101 D102 D200 D202 D205 D208 D400 D401 E261 E303 E501 I100 I101 N802 N803 N806
     sickbeard/tvcache.py D100 D101 D102 D200 D205 D400 D401 E501 F401 I100 I101 N802 N803 N806
     sickbeard/ui.py D100 D101 D102 D200 D202 D204 D205 D400 D401 E501 N802 N803 N806
-    sickbeard/versionChecker.py D100 D101 D102 D200 D202 D205 D400 D401 E402 E501 I100 I101 N802 N803 N806
+    sickbeard/versionChecker.py D100 D101 D102 D200 D202 D205 D400 D401 E402 E501 N802 N803 N806
     sickrage/helper/common.py D100 D200 D202 D205 D400 E128 E302 E501 I100 I101 W391
     sickrage/helper/encoding.py D100 D202 D400 D401 I100
     sickrage/helper/exceptions.py D100 D200 D202 D205 D400 I100
