Improve scene_exceptions (#848)
* Improve scene_exceptions

* Improve code and pep

* Update imports

* Update imports

* Update scene_exceptions.py

* Update scene_exceptions.py

* Update scene_exceptions.py

* Update scene_exceptions.py

* Update scene_exceptions.py

* Update scene_exceptions.py

* Update scene_exceptions.py

* Improve combine_exceptions

* Last changes

* Update pytest

* Update scene_exceptions.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -139,7 +139,7 @@ flake8-ignore =
     sickbeard/rssfeeds.py D100 D103 N802
     sickbeard/sab.py D100 D202 D400 D401 I100 N802 N806
     sickbeard/sbdatetime.py D100 D101 D102 D105 D202 D205 D400 I100 N801
-    sickbeard/scene_exceptions.py D100 D103 D200 D202 D205 D400 D401 D403 E302 E501 I100 N802 N803 N806
+    sickbeard/scene_exceptions.py D100
     sickbeard/scene_numbering.py D100 D200 D205 D400 D401 E501 I100 N803 N806
     sickbeard/scheduler.py D100 D101 D102 D200 D205 D400 D401 E501 I100 N802 N803
     sickbeard/searchBacklog.py D100 D101 D102 E501 I100 I101 N802 N803 N806
