--- a/lib/guessit/test/movies.yml
+++ b/lib/guessit/test/movies.yml
@@ -56,7 +56,7 @@
   audio_profile: HE
   language: [ french, english ]
   subtitle_language: [ french, english ]
-  release_group: XCT
+  release_group: Chaps
 
 ? Battle Royale (2000)/Battle.Royale.(Batoru.Rowaiaru).(2000).(Special.Edition).CD1of2.DVDRiP.XviD-[ZeaL].avi
 : title: Battle Royale
@@ -81,7 +81,7 @@
   audio_codec: AAC
   language: [ French, English ]
   subtitle_language: [ French, English ]
-  release_group: XCT
+  release_group: Ind
 
 ? Movies/Toy Story (1995)/Toy Story [HDTV 720p English-Spanish].mkv
 : title: Toy Story
